--- a/public/checkout.html
+++ b/public/checkout.html
@@ -76,5 +76,7 @@
       </form>
     </div>
   </div>
+  <script src="./script.js" defer></script>
+<script src="./js/checkout.js" defer></script>
 </body>
 </html>
