--- a/public/sales-history.html
+++ b/public/sales-history.html
@@ -1,187 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>売上履歴（全体）</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>売上履歴</title>
+  <!-- 404対策（空favicon） -->
+  <link rel="icon" href="data:,">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <header class="navbar">
-    <div class="nav-brand"><h1>🛒 Vulnerable Shop</h1></div>
-    <div class="nav-links">
-      <a href="./index.html">ホーム</a>
-      <a href="./products.html">商品</a>
-      <a href="./cart.html">カート</a>
-      <a href="./admin.html">管理ダッシュボード</a>
-      <a href="./inventory.html">在庫管理</a>
-    </div>
+    <div class="logo">Vulnerable Shop</div>
+    <nav class="nav-links"></nav>
     <div class="auth-buttons">
-      <a class="btn btn-ghost btn-sm" href="./inventory.html">← 在庫管理へ戻る</a>
+      <a id="profileLink" href="./profile.html" class="btn">プロフィール</a>
+      <button id="logoutBtn" class="btn btn-danger">ログアウト</button>
+      <span id="navUser" class="pill" hidden></span>
     </div>
   </header>
 
   <main class="admin-section" style="max-width:1280px;margin:0 auto;">
-    <div style="display:flex;justify-content:space-between;align-items:center;margin:14px 0 10px;">
-      <h2>売上履歴（全体）</h2>
-      <div class="btn-group">
-        <button id="btnReload" class="btn btn-ghost btn-sm">最新を再取得</button>
-      </div>
-    </div>
-    <p class="muted">直近の売上を新しい順に表示します。必要に応じて在庫管理の「売れた」合計と照合できます。</p>
+    <h1>売上履歴（全体）</h1>
+    <div id="hitCount" style="margin:8px 0 12px 0;font-weight:700;">表示件数: 0（全件表示）</div>
 
-    <!-- 検索バー -->
-    <div class="search-container" style="max-width:100%;margin-top:12px;gap:8px;display:grid;grid-template-columns:1fr 1fr 140px 140px auto auto;">
-      <input id="qUser" class="search-input" placeholder="ユーザー（username / email 部分一致）" />
-      <input id="qProduct" class="search-input" placeholder="商品名（部分一致）" />
-      <input id="qMin" class="search-input" type="number" min="0" placeholder="金額（以上）" />
-      <input id="qMax" class="search-input" type="number" min="0" placeholder="金額（以下）" />
+    <!-- 既存テンプレ側にフィルターがあればそのまま使われます。無い場合はJSが自動生成します -->
+    <div class="filters" style="display:flex;gap:8px;flex-wrap:wrap;margin-bottom:12px;">
+      <input id="qUser" class="input" placeholder="ユーザー（username / email 部分一致）">
+      <input id="qProduct" class="input" placeholder="商品名（部分一致）">
+      <input id="qMin" class="input" placeholder="金額（以上）" style="width:120px">
+      <input id="qMax" class="input" placeholder="金額（以下）" style="width:120px">
       <button id="btnSearch" class="btn btn-primary">検索</button>
-      <button id="btnClear" class="btn btn-secondary">クリア</button>
+      <button id="btnClear" class="btn">クリア</button>
+      <button id="btnReload" class="btn">最新を再取得</button>
     </div>
 
-    <!-- 件数表示 -->
-    <div id="hitInfo" class="muted" style="margin:10px 2px;"></div>
-
-    <!-- テーブル -->
-    <div class="inv-table-wrap" style="margin-top:8px;">
-      <table class="table" id="salesTable">
+    <div class="table-wrap">
+      <table class="table" style="width:100%;border-collapse:collapse">
         <thead>
           <tr>
-            <th style="width:160px;">日時</th>
-            <th style="width:180px;">ユーザー</th>
-            <th>商品名</th>
-            <th style="width:90px;text-align:right;">数量</th>
-            <th style="width:120px;text-align:right;">単価</th>
-            <th style="width:140px;text-align:right;">小計（行）</th>
-            <th style="width:120px;text-align:center;">注文ID</th>
+            <th style="text-align:left;padding:8px">日時</th>
+            <th style="text-align:left;padding:8px">ユーザー</th>
+            <th style="text-align:left;padding:8px">商品名</th>
+            <th style="text-align:right;padding:8px">数量</th>
+            <th style="text-align:right;padding:8px">単価</th>
+            <th style="text-align:right;padding:8px">小計（行）</th>
+            <th style="text-align:left;padding:8px">注文ID</th>
           </tr>
         </thead>
-        <tbody id="salesBody"></tbody>
+        <tbody id="salesTbody"></tbody>
       </table>
-    </div>
-
-    <div style="display:flex;justify-content:center;margin:16px 0 28px;">
-      <button id="btnMore" class="btn btn-ghost btn-sm" hidden>さらに読み込む</button>
+      <div style="margin:16px 0">
+        <button id="btnMore" class="btn">さらに読み込む</button>
+      </div>
     </div>
   </main>
 
+  <!-- ここが大事：昔のインライン <script> は置かない -->
   <script src="./script.js" defer></script>
-  <script>
-    (function(){
-      'use strict';
-      const body   = document.getElementById('salesBody');
-      const hit    = document.getElementById('hitInfo');
-      const more   = document.getElementById('btnMore');
-      const reload = document.getElementById('btnReload');
-
-      const qUser    = document.getElementById('qUser');
-      const qProduct = document.getElementById('qProduct');
-      const qMin     = document.getElementById('qMin');
-      const qMax     = document.getElementById('qMax');
-      const btnSearch= document.getElementById('btnSearch');
-      const btnClear = document.getElementById('btnClear');
-
-      // ★ 初期は「全件表示」モード
-      const page = { all:true, limit:100, offset:0, lastCount:0, filters:{} };
-
-      function fmt(n){ try{ return window.fmtJPY ? fmtJPY(n) : ('¥'+(Math.round(n||0)).toLocaleString('ja-JP')); }catch{ return n; } }
-      const esc = s => String(s ?? '').replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
-
-      function readFilters(){
-        const f = {};
-        const u = qUser.value.trim();    if (u) f.user = u;
-        const p = qProduct.value.trim(); if (p) f.product = p;
-        const mi= qMin.value.trim();     if (mi !== '') f.min = Math.max(0, parseInt(mi,10)||0);
-        const ma= qMax.value.trim();     if (ma !== '') f.max = Math.max(0, parseInt(ma,10)||0);
-        return f;
-      }
-
-      function buildQS(obj){
-        const u = new URLSearchParams();
-        if (page.all) {
-          u.set('all','1'); // ← 全件モード（サーバ側で LIMIT/OFFSET 無効）
-        } else {
-          u.set('limit', String(page.limit));
-          u.set('offset', String(page.offset));
-        }
-        for (const [k,v] of Object.entries(obj||{})) if (v !== undefined && v !== null && v!=='') u.set(k, String(v));
-        return u.toString();
-      }
-
-      async function fetchSales(opts={}){
-        const append = !!opts.append;
-        const qs = buildQS(page.filters);
-        try{
-          const headers = {};
-          if (window.Auth?.getToken) {
-            const t = Auth.getToken() || '';
-            if (t) headers.Authorization = 'Bearer ' + t;
-          }
-          const r = await fetch('/api/admin/sales-timeline?' + qs, { headers });
-          if (!r.ok) throw new Error('HTTP '+r.status);
-          const rows = await r.json();
-          page.lastCount = rows.length;
-
-          if (!append) body.innerHTML = '';
-
-          for (const it of rows){
-            const tr = document.createElement('tr');
-            tr.innerHTML = `
-              <td>${esc(it.created_at || '')}</td>
-              <td>${esc(it.user || '')}</td>
-              <td>${esc(it.product || '')}</td>
-              <td style="text-align:right;">${Number(it.qty||0).toLocaleString('ja-JP')}</td>
-              <td style="text-align:right;">${fmt(it.unit||0)}</td>
-              <td style="text-align:right;font-weight:700;">${fmt(it.line||0)}</td>
-              <td style="text-align:center;font-family:monospace;">${esc(it.orderRef || '')}</td>
-            `;
-            body.appendChild(tr);
-          }
-
-          const loaded = body.children.length;
-          hit.textContent = page.all
-            ? `表示件数: ${loaded.toLocaleString('ja-JP')}（全件表示）`
-            : `表示件数: ${loaded.toLocaleString('ja-JP')}${rows.length < page.limit ? '（末尾まで到達）' : ''}`;
-
-          more.hidden   = page.all;
-          more.disabled = page.all || rows.length < page.limit;
-        }catch(e){
-          console.error(e);
-          body.innerHTML = `<tr><td colspan="7" class="muted">取得に失敗しました（権限が必要な可能性）</td></tr>`;
-          hit.textContent = '';
-          more.hidden = true;
-        }
-      }
-
-      function doSearch(){
-        page.offset = 0;
-        page.filters = readFilters();
-        // 検索しても基本は全件表示を維持（フィルタ後の全件）
-        page.all = true;
-        fetchSales({ append:false });
-      }
-      function loadMore(){
-        if (page.all) return;
-        page.offset += page.limit;
-        fetchSales({ append:true });
-      }
-      function clearFilters(){
-        qUser.value = qProduct.value = qMin.value = qMax.value = '';
-        doSearch();
-      }
-
-      btnSearch.addEventListener('click', doSearch);
-      btnClear .addEventListener('click', clearFilters);
-      more     .addEventListener('click', loadMore);
-      reload   .addEventListener('click', ()=>{ page.offset = 0; fetchSales({ append:false }); });
-      [qUser,qProduct,qMin,qMax].forEach(el=> el.addEventListener('keydown', e=>{ if(e.key==='Enter') doSearch(); }));
-
-      // 初期ロード：フィルター無しで全件
-      page.filters = {};
-      page.all = true;
-      fetchSales({ append:false });
-    })();
-  </script>
+  <script src="./js/sales_history.js" defer></script>
 </body>
 </html>
